--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Contact</title>
+    <title>Bilal Habeshan Food  - Contact</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Ethiopian Kitchen</h1>
+            <h1>Bilal Habeshan Food </h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
