--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,14 @@
         <div class="contact-flex">
             <div class="contact-info">
                 <h3>Get In Touch</h3>
-                <p><strong>Address:</strong> 456 Elm Street, Cityville, CA 90210</p>
-                <p><strong>Phone:</strong> (555) 123-4567</p>
-                <p><strong>Email:</strong> info@bilalethiopiankitchen.com</p>
+                <p><strong>Address:</strong>Arid Street, Mekelle, Tigray 90210</p>
+                <p><strong>Phone:(+251) 900-000-000</strong></p>
+                <p><strong>Email:</strong> info@bilalhabeshanfood
+.com</p>
 
                 <h3>Opening Hours</h3>
-                <p>Mon - Fri: 7:00 AM - 5:00 PM</p>
-                <p>Sat - Sun: 8:00 AM - 3:00 PM</p>
+                <p>Mon - Fri: 12:00 AM - 3:00 PM</p>
+                <p>Sat - Sun: 12:00 AM - 5:00 PM</p>
             </div>
 
             <div class="map-area">
@@ -47,8 +48,8 @@
     </section>
 
     <footer>
-        <p>456 Elm Street, Cityville, CA | (555) 123-4567</p>
-        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
+        <p>Arid Street,Mekelle,Tigray | (+251) 900-000-000</p>
+        <p>&copy; 2025 Bilal Habeshan Food. All Rights Reserved.</p>
     </footer>
 
 </body>
