--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - About Us</title>
+    <title>Bilal Habeshan Food- About Us</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Ethiopian Kitchen</h1>
+            <h1>Bilal Habeshan Food</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -35,8 +35,8 @@
     </section>
 
     <footer>
-        <p>456 Elm Street, Cityville, CA | (555) 123-4567</p>
-        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
+        <p>Arid, Mekelle, Tigray | (+251) 900-000-000</p>
+        <p>&copy; 2025 Bilal Habeshan Food . All Rights Reserved.</p>
     </footer>
 
 </body>
