--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Habeshan Food  - Contact</title>
+    <title>Bilal Habeshan Kitchen  - Contact</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Habeshan Food </h1>
+            <h1>Bilal Habeshan Kitchen </h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -49,7 +49,7 @@
 
     <footer>
         <p>Arid Street,Mekelle,Tigray | (+251) 900-000-000</p>
-        <p>&copy; 2025 Bilal Habeshan Food. All Rights Reserved.</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
