--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <h3>Get In Touch</h3>
                 <p><strong>Address:</strong>Arid Street, Mekelle, Tigray 90210</p>
                 <p><strong>Phone:(+251) 900-000-000</strong></p>
-                <p><strong>Email:</strong> info@bilalhabeshanfood
+                <p><strong>Email:</strong> info@bilalhabeshankitchen
 .com</p>
 
                 <h3>Opening Hours</h3>
