--- a/gallery.html
+++ b/gallery.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Habeshan Kitchen - Gallery</title>
+    <title>Bilal Ethiopian Kitchen - Gallery</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Habeshan Kitchen</h1>
+            <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -27,29 +27,29 @@
 
         <div class="image-grid">
             <div class="gallery-item">
-
-[Image of dining table with injera and stews]
+            <img src="./images/dorowot.png" alt="dorowot image">        
+        </div>
+            <div class="gallery-item">
+            <img src="./images/tibs.png" alt="tibs image">
 </div>
             <div class="gallery-item">
-
-[Image of a plate of tibs and sides]
-</div>
-            <div class="gallery-item"></div>
+            <img src="./images/injera.png" alt="injera platter image">
+            </div>
             <div class="gallery-item">
-
-[Image of Bunna (coffee) ceremony]
+            <img src="./images/coffee_ceremony.png" alt="coffee ceremony image">
 </div>
             <div class="gallery-item">
-
-[Image of the restaurant exterior]
+            <img src="./images/image.png" alt="Ethiopian bread image">
 </div>
-            <div class="gallery-item"></div>
+            <div class="gallery-item">
+            <img src="./images/restaurant_interior.png" alt="restaurant interior image">
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>Arid Street, Mekelle, Tigray | (+251) 900-000-000</p>
-        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
+        <p>456 Elm Street, Cityville, CA | (555) 123-4567</p>
+        <p>&copy; 2025 The Cozy Corner Cafe. All Rights Reserved.</p>
     </footer>
 
 </body>
