--- a/about.html
+++ b/about.html
@@ -3,40 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Habeshan Kitchen- About Us</title>
+    <title>Bilal Ethiopian Kitchen - About Us</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Habeshan Kitchen</h1>
+            <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="location.html">Location</a></li>
             </ul>
         </nav>
     </header>
 
     <section class="content-section" id="about-page">
         <h2>Our Story & Philosophy</h2>
+        <div class="about-grid">
+            <div class="about-photo">
+                <!-- Add owner photo at ./images/owner.jpg (replace with real photo) -->
+                <img src="./images/owner.jpg" alt="Bilal Ahmed, owner of Bilal Ethiopian Kitchen">
+            </div>
 
-        <p>Bilal Ethiopian Kitchen celebrates the flavors and hospitality of Ethiopia. Founded by <strong>Bilal Ahmed</strong>, the restaurant shares family recipes and the tradition of communal eating centered around injera and richly spiced stews.</p>
+            <div class="about-text">
+                <p>Bilal Ethiopian Kitchen celebrates the flavors and hospitality of Ethiopia. Founded by <strong>Bilal Ahmed</strong>, the restaurant shares family recipes and the tradition of communal eating centered around injera and richly spiced stews.</p>
 
-        <p>Bilal grew up watching coffee ceremonies and home-cooked meals that brought family and friends together. Our goal is to bring that same warmth, authenticity, and high-quality ingredients to every plate and cup.</p>
-
-        <div class="philosophy">
-            <h3>Our Philosophy</h3>
-            <p>We honor traditional Ethiopian techniques, source fresh ingredients when possible, and create dishes meant to be shared. Enjoy authentic flavors and a welcoming atmosphere.</p>
+                <p>Bilal grew up watching coffee ceremonies and home-cooked meals that brought family and friends together. Our goal is to bring that same warmth, authenticity, and high-quality ingredients to every plate and cup.</p>
+            </div>
         </div>
     </section>
 
     <footer>
-        <p>Arid, Mekelle, Tigray | (+251) 900-000-000</p>
-        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
+        <p>456 Elm Street, Cityville, CA | (555) 123-4567</p>
+        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
