--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Gallery</title>
+    <title>Bilal Habeshan Kitchen - Gallery</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -57,8 +57,8 @@
     </section>
 
     <footer>
-        <p>456 Elm Street, Cityville, CA | (555) 123-4567</p>
-        <p>&copy; 2025 The Cozy Corner Cafe. All Rights Reserved.</p>
+        <p> Arid Street Mekelle, Tigray, | (+251) 900-000-000</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
