--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 
     <footer>
         <p>Arid Street, Mekelle, Tigray | (+251) 900-0000-00</p>
-        <p>&copy; 2025 Bilal Habeshan food. All Rights Reserved.</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
