--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
     <footer>
         <p>Arid Street, Mekelle, Tigray | (555) 123-4567</p>
-        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
