--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 
     <header>
         <nav>
-            <h1>Bilal Ethiopian Kitchen</h1>
+            <h1>Bilal Habeshan Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
