--- a/index.html
+++ b/index.html
@@ -11,16 +11,17 @@
 <body>
 
     <header>
-        <nav>
-            <h1>Bilal Habeshan Kitchen</h1>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="menu.html">Menu</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="gallery.html">Gallery</a></li>
-            </ul>
-href="location.html">Location</a></li>
+          <nav class="main-nav" aria-label="Main navigation">
+    <a href="index.html" class="active">Home</a>
+    <a href="menu.html">Menu</a>
+    <a href="about.html">About Us</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="contact.html">Contact</a>
+<a href="location.html">Location</a></li>
+    <a href="#booking" class="btn btn-outline">Book a Table</a>
+  </nav>
+</div>
+
         </nav>
     </header>
 
