--- a/index.html
+++ b/index.html
@@ -11,26 +11,24 @@
 <body>
 
     <header>
-          <nav class="main-nav" aria-label="Main navigation">
-    <a href="index.html" class="active">Home</a>
-    <a href="menu.html">Menu</a>
-    <a href="about.html">About Us</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="contact.html">Contact</a>
-<a href="location.html">Location</a></li>
-    <a href="#booking" class="btn btn-outline">Book a Table</a>
-  </nav>
-</div>
-
-        </nav>
-    </header>
-
-    <section id="home" class="hero">
-        <div class="hero-content">
-            <h2>Welcome to Bilal Ethiopian Kitchen</h2>
-            <p>Experience authentic Ethiopian flavors: traditional stews, injera platters, and ceremonial coffee.</p>
-            <a href="#picks" class="button">See Our Top Picks</a>
+          <main>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="hero-overlay"></div>
+      <div class="container hero-inner">
+        <div class="hero-text">
+          <h2>Welcome to Bilal Habeshan Kitchen</h2>
+          <p>Warm, authentic Habesha dishes — served with tradition. Try our Doro Wat, Tibs and the classic Buna coffee ceremony.</p>
+          <div class="hero-ctas">
+            <a href="menu.html" class="btn btn-primary">View Menu</a>
+            <a href="#booking" class="btn btn-ghost">Book a Table</a>
+          </div>
         </div>
+        <figure class="hero-image">
+          <img src="./images/hero.jpg" alt="Large platter of injera and traditional dishes" loading="lazy" onerror="this.src='./images/placeholder.jpg'">
+        </figure>
+      </div>
+    
     </section>
 
     <section id="picks" class="content-section">
