--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Habeshan Kitchen - About Us</title>
+    <title>Bilal Ethiopian Kitchen - About Us</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 
     <header>
         <nav>
-            <h1>Bilal Habeshan Kitchen</h1>
+            <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -22,71 +22,38 @@
         </nav>
     </header>
 
-    <section class="about container" id="about">
-  <div class="about-grid">
-    <div class="about-image">
-      <img src="./images/about.jpg" alt="Chef preparing traditional Ethiopian dish" loading="lazy" onerror="this.src='./images/placeholder.jpg'">
-    </div>
-    <div class="about-text">
-      <h3>Our Story</h3>
-      <p>Bilal Habeshan Kitchen celebrates the vibrant food and hospitality of the Habesha tradition. We combine authentic recipes passed down through generations with fresh, locally sourced ingredients to create dishes full of spice, warmth, and heart.</p>
-      <ul class="features">
-        <li><strong>Handmade Injera</strong> — traditional teff sourdough.</li>
-        <li><strong>Signature Stews</strong> — Doro Wat, Misir Wot, and Shiro.</li>
-        <li><strong>Coffee Ceremony</strong> — experience Bunna the traditional way.</li>
-      </ul>
-      <a href="about.html" class="btn btn-outline">Read More</a>
-    </div>
-  </div>
-</section>
+    <section class="content-section" id="about-page">
+        <h2>Our Story & Philosophy</h2>
+        <div class="about-grid">
+            <div class="about-photo">
+                <!-- Add owner photo at ./images/owner.jpg (replace with real photo) -->
+                <img src="./images/owner.jpg" alt="Bilal Ahmed, owner of Bilal Ethiopian Kitchen">
+            </div>
 
-<!-- MENU HIGHLIGHTS -->
-<section class="highlights container" aria-label="Menu highlights">
-  <h3>Menu Highlights</h3>
-  <p class="sub">A selection of our most-loved dishes</p>
+            <div class="about-text">
+                <p>Bilal Ethiopian Kitchen celebrates the flavors and hospitality of Ethiopia. Founded by <strong>Bilal Jemal</strong>, the restaurant shares family recipes and the tradition of communal eating centered around injera and richly spiced stews.</p>
 
-  <div class="cards-grid">
-    <article class="card">
-      <img src="./images/doro-wat.jpg" alt="Doro Wat" loading="lazy" onerror="this.src='./images/placeholder.jpg'">
-      <div class="card-body">
-        <h4>Doro Wat</h4>
-        <p>Slow-cooked chicken in rich berbere sauce — spicy, tender, and deeply flavorful.</p>
-        <div class="card-meta">
-          <span class="price">2499.99 Birr</span>
-          <a href="menu.html" class="btn btn-small">Order</a>
+                <p>Bilal grew up watching coffee ceremonies and home-cooked meals that brought family and friends together. Our goal is to bring that same warmth, authenticity, and high-quality ingredients to every plate and cup.</p>
+            </div>
         </div>
-      </div>
-    </article>
-
-    <article class="card">
-      <img src="./images/tibs.jpg" alt="Tibs" loading="lazy" onerror="this.src='./images/placeholder.jpg'">
-      <div class="card-body">
-        <h4>Tibs</h4>
-        <p>Sautéed meat with peppers and onions — a hearty favorite for gatherings.</p>
-        <div class="card-meta">
-          <span class="price">599.99 Birr</span>
-          <a href="menu.html" class="btn btn-small">Order</a>
-        </div>
-      </div>
-    </article>
-
-    <article class="card">
-      <img src="./images/kitfo.jpg" alt="Kitfo" loading="lazy" onerror="this.src='./images/placeholder.jpg'">
-      <div class="card-body">
-        <h4>Kitfo</h4>
-        <p>Seasoned minced beef served traditionally with mitmita and butter.</p>
-        <div class="card-meta">
-          <span class="price">1499.99 Birr</span>
-          <a href="menu.html" class="btn btn-small">Order</a>
-        </div>
-      </div>
-    </article>
-  </div>
-</section>
+    </section>
 
     <footer>
-        <p>Arid Street, Mekelle, Tigray | (555) 123-4567</p>
-        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
+        <div class="footer-content">
+            <div class="footer-item">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
+                <span>Arid Street, Mekelle, Ethiopia</span>
+            </div>
+            <div class="footer-item">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 01.94-.27c1.02.26 2.12.4 3.25.4a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 4a1 1 0 011-1h3.5a1 1 0 011 1c0 1.13.14 2.23.4 3.25a1 1 0 01-.27.94l-2.01 2.6z"/></svg>
+                <span>(+251) 91 000 0000</span>
+            </div>
+            <div class="footer-item">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                <span>info@bilalhabeshanfoods.com</span>
+            </div>
+        </div>
+        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
