--- a/location.html
+++ b/location.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Location</title>
+    <title>Bilal Ethiopian Kitchen - Gallery</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-        <header>
+
+    <header>
         <nav>
             <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
@@ -20,30 +21,58 @@
             </ul>
         </nav>
     </header>
-    <section class="content-section" id="contact-page">
-        <h2>Location & Contact</h2>
-        
-        <div class="contact-flex">
-            <div class="contact-info">
-                <h3>Get In Touch</h3>
-                <p><strong>Address:</strong> Arid Street</p>
-                <p><strong>Phone:</strong> (+251) 900-0000-00</p>
-                <p><strong>Email:</strong> info@bilalhabeshanfoods.com</p>
 
-                <h3>Opening Hours</h3>
-                <p>Mon - Fri: 12:00 AM - 3:00 PM</p>
-                <p>Sat - Sun: 12:00 AM - 5:00 PM</p>
-            </div>
+    <section class="content-section" id="gallery-page">
+        <h2>Gallery & Ambiance</h2>
+        <p>A look at our traditional dishes, communal platters, and the coffee ceremony.</p>
 
-            <div class="map-area">
-                <h3>Find Us Here</h3>
-                <img src="./images/image.png" alt="Location Map">
+        <div class="image-grid">
+            <div class="gallery-item">
+            <img src="./images/dorowot.png" >        
+        </div>
+            <div class="gallery-item">
+            <img src="./images/tibs.png">
+        </div>
+            <div class="gallery-item">
+            <img src="./images/injera.png">
             </div>
+            <div class="gallery-item">
+            <img src="./images/coffee_ceremony.png">
+        </div>
+            <div class="gallery-item">
+            <img src="./images/image.png">
+        </div>
+            <div class="gallery-item">
+            <img src="./images/restaurant_interior.png">
+            </div>
+            <div class="gallery-item">
+                <img src="./images/shiro.jpg">
+            </div>
+            <div class="gallery-item">
+                <img src="./images/beyaynetu.webp">
+            </div>
+            <div class="gallery-item">
+                <img src="./images/salad.jpg">
         </div>
     </section>
+
     <footer>
-        <p>456 Elm Street, Cityville, CA | (555) 123-4567</p>
-        <p>&copy; 2025 The Cozy Corner Cafe. All Rights Reserved.</p>
+        <div class="footer-content">
+            <div class="footer-item">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
+                <span>Arid Street, Mekelle, Ethiopia</span>
+            </div>
+            <div class="footer-item">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 01.94-.27c1.02.26 2.12.4 3.25.4a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 4a1 1 0 011-1h3.5a1 1 0 011 1c0 1.13.14 2.23.4 3.25a1 1 0 01-.27.94l-2.01 2.6z"/></svg>
+                <span>(+251) 91 000 0000</span>
+            </div>
+            <div class="footer-item">
+                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                <span>info@bilalhabeshanfoods.com</span>
+            </div>
+        </div>
+        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
     </footer>
+
 </body>
 </html>
