--- a/location.html
+++ b/location.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Gallery</title>
+    <title>Bilal Ethiopian Kitchen - Location</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-
-    <header>
+        <header>
         <nav>
             <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
@@ -21,41 +20,27 @@
             </ul>
         </nav>
     </header>
+    <section class="content-section" id="contact-page">
+        <h2>Location & Contact</h2>
+        
+        <div class="contact-flex">
+            <div class="contact-info">
+                <h3>Get In Touch</h3>
+                <p><strong>Address:</strong> Arid Street</p>
+                <p><strong>Phone:</strong> (+251) 900-0000-00</p>
+                <p><strong>Email:</strong> info@bilalhabeshanfoods.com</p>
 
-    <section class="content-section" id="gallery-page">
-        <h2>Gallery & Ambiance</h2>
-        <p>A look at our traditional dishes, communal platters, and the coffee ceremony.</p>
+                <h3>Opening Hours</h3>
+                <p>Mon - Fri: 12:00 AM - 3:00 PM</p>
+                <p>Sat - Sun: 12:00 AM - 5:00 PM</p>
+            </div>
 
-        <div class="image-grid">
-            <div class="gallery-item">
-            <img src="./images/dorowot.png" >        
-        </div>
-            <div class="gallery-item">
-            <img src="./images/tibs.png">
-        </div>
-            <div class="gallery-item">
-            <img src="./images/injera.png">
+            <div class="map-area">
+                <h3>Find Us Here</h3>
+                <img src="image.png" alt="Location Map">
             </div>
-            <div class="gallery-item">
-            <img src="./images/coffee_ceremony.png">
-        </div>
-            <div class="gallery-item">
-            <img src="./images/image.png">
-        </div>
-            <div class="gallery-item">
-            <img src="./images/restaurant_interior.png">
-            </div>
-            <div class="gallery-item">
-                <img src="./images/shiro.jpg">
-            </div>
-            <div class="gallery-item">
-                <img src="./images/beyaynetu.webp">
-            </div>
-            <div class="gallery-item">
-                <img src="./images/salad.jpg">
         </div>
     </section>
-
     <footer>
         <div class="footer-content">
             <div class="footer-item">
@@ -73,6 +58,5 @@
         </div>
         <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
     </footer>
-
 </body>
 </html>
