--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
             <img src="./images/coffee_ceremony.png">
         </div>
             <div class="gallery-item">
-            <img src="./images/image.png">
+            <img src="./images/ambesha.png">
         </div>
             <div class="gallery-item">
             <img src="./images/restaurant_interior.png">
