--- a/location.html
+++ b/location.html
@@ -37,7 +37,7 @@
 
             <div class="map-area">
                 <h3>Find Us Here</h3>
-                <img src="map.svg" alt="Location Map">
+                <img src="image/map.svg" alt="Location Map">
             </div>
         </div>
     </section>
