--- a/location.html
+++ b/location.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+no<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
 
             <div class="map-area">
                 <h3>Find Us Here</h3>
-                <img src="./images/map.svg" alt="Location Map">
+                <img src="./images/image.png" alt="Location Map">
             </div>
         </div>
     </section>
