--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"class="active">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
