--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <h1>Bilal Ethiopian Kitchen</h1>
             <ul>
-                <li><a href="index.html"class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -62,25 +62,50 @@
                 <p>A plate with all the goods of the restuarant, <br> from the very delicious doro wot, to our in house shiro, with a side tibs.</p>
                 <img src="./images/beyaynetu.webp" alt="">
             </div>
+            <div class="pick-item">
+                <h3>Fruit-Punch</h3>
+                <p>A refreshing tropical fruit punch.<br> sweet, tangy, and served chilled.</p>
+                <img src="./images/smoothie.jpg" alt="smoothie glass">
+            </div>
+            <div class="pick-item">
+                <h3>Tibs</h3>
+                <p>Tender cubed beef sautéed with onions, garlic, and bell peppers, finished with a touch of berbere for warmth juicy, slightly charred, and served with injera or seasoned rice.</p>
+                <img src="./images/tibs.png" alt="Beef Tibs platter">
+            </div>
         </div>
     </section>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-item">
-                <!-- location icon -->
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
-                <span>Arid Street, Mekelle, Ethiopia</span>
+        <div class="footer-container">
+            <div class="footer-left">
+                <div class="footer-content">
+                    <div class="footer-item">
+                        <!-- location icon -->
+                        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5S10.62 6.5 12 6.5s2.5 1.12 2.5 2.5S13.38 11.5 12 11.5z"/></svg>
+                        <span>Arid Street, Mekelle, Ethiopia</span>
+                    </div>
+                    <div class="footer-item">
+                        <!-- phone icon -->
+                        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 01.94-.27c1.02.26 2.12.4 3.25.4a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 4a1 1 0 011-1h3.5a1 1 0 011 1c0 1.13.14 2.23.4 3.25a1 1 0 01-.27.94l-2.01 2.6z"/></svg>
+                        <span>(+251) 91 000 0000</span>
+                    </div>
+                    <div class="footer-item">
+                        <!-- email icon -->
+                        <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
+                        <span>info@bilalhabeshanfoods.com</span>
+                    </div>
+                </div>
             </div>
-            <div class="footer-item">
-                <!-- phone icon -->
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M6.62 10.79a15.053 15.053 0 006.59 6.59l2.2-2.2a1 1 0 01.94-.27c1.02.26 2.12.4 3.25.4a1 1 0 011 1V20a1 1 0 01-1 1C10.07 21 3 13.93 3 4a1 1 0 011-1h3.5a1 1 0 011 1c0 1.13.14 2.23.4 3.25a1 1 0 01-.27.94l-2.01 2.6z"/></svg>
-                <span>(+251) 91 000 0000</span>
-            </div>
-            <div class="footer-item">
-                <!-- email icon -->
-                <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-                <span>info@bilalhabeshanfoods.com</span>
+
+            <div class="footer-right">
+                <div class="student-info" aria-label="Student information (placeholder)">
+                    <h3>Student Information</h3>
+                    <ul>
+                        <li><strong>Name:</strong> <span id="student-name">Bilal Jemal</span></li>
+                        <li><strong>ID:</strong> <span id="student-id">UGR/18</span></li>
+                        <li><strong>Department:</strong> <span id="student-college">Computer Science</span></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
