--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="hero-overlay"></div>
         <div class="hero-inner">
             <div class="hero-text">
-                <h1>Bilal Ethiopian Kitchen</h1>
+                <h1>Bilal Habeshan Kitchen</h1>
                 <p class="tagline">Authentic Ethiopian flavors served with warmth — injera, stews, and ceremonial coffee.</p>
                 <div class="hero-ctas">
                     <a href="menu.html" class="button primary">View Menu</a>
