--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,9 @@
     <title>Bilal Ethiopian Kitchen - Menu</title>
     <link rel="stylesheet" href="./css/styles.css">
 
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+
+
 </head>
 <body>
 
