--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             </div>
 
             <div class="about-text">
-                <p>Bilal Ethiopian Kitchen celebrates the flavors and hospitality of Ethiopia. Founded by <strong>Bilal Jemal</strong>, the restaurant shares family recipes and the tradition of communal eating centered around injera and richly spiced stews.</p>
+                <p>Bilal Ethiopian Kitchen is a celebration of our **Habesha roots**, bringing the true flavors and legendary **hospitality** of Ethiopia to your table. Founded by **Bilal Jemal**, we share cherished family recipes and honor the beautiful tradition of **communal eating** centered around fresh injera and our deeply spiced stews.</p>
 
                 <p>Bilal grew up watching coffee ceremonies and home-cooked meals that brought family and friends together. Our goal is to bring that same warmth, authenticity, and high-quality ingredients to every plate and cup.</p>
             </div>
