--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
             <div class="about-text">
                 <p>Bilal Ethiopian Kitchen is a celebration of our **Habesha roots**, bringing the true flavors and legendary **hospitality** of Ethiopia to your table. Founded by **Bilal Jemal**, we share cherished family recipes and honor the beautiful tradition of **communal eating** centered around fresh injera and our deeply spiced stews.</p>
 
-                <p>Bilal grew up watching coffee ceremonies and home-cooked meals that brought family and friends together. Our goal is to bring that same warmth, authenticity, and high-quality ingredients to every plate and cup.</p>
-            </div>
+                <p>Bilal grew up surrounded by the comforting aroma of **Buna (coffee)** ceremonies and the warmth of home-cooked meals that bring **family and friends together**. Our goal is simple: to share that same **authenticity, warmth, and high-quality ingredients** in every dish and every cup of coffee we serve.</p>
+</div>
         </div>
     </section>
 
