--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     </header>
 
     <section class="content-section" id="about-page">
-        <h2>Our Story & Philosophy</h2>
+        <h2>Our Heritage & Hospitality</h2>
         <div class="about-grid">
             <div class="about-photo">
                 <!-- Add owner photo at ./images/owner.jpg (replace with real photo) -->
@@ -33,7 +33,7 @@
             </div>
 
             <div class="about-text">
-                <p>"Bilal Ethiopian Kitchen is a celebration of our Habesha roots, bringing the true flavors and legendary hospitality of Ethiopia to your table. Founded by <strong>Bilal Jemal</strong>, we share cherished family recipes and honor the beautiful tradition of communal eating centered around fresh injera and our deeply spiced stews."</p>
+                <p>"Bilal Ethiopian Kitchen is a celebration of our <strong>Habesha roots</strong>, bringing the true flavors and legendary hospitality of Ethiopia to your table. Founded by <strong>Bilal Jemal</strong>, we share cherished family recipes and honor the beautiful tradition of communal eating centered around fresh injera and our deeply spiced stews."</p>
 
                 <p>"Bilal grew up surrounded by the comforting aroma of<strong> Buna (coffee)</strong>ceremonies and the warmth of home-cooked meals that bring family and friends together. Our goal is simple: to share that same authenticity, warmth, and high-quality ingredients in every dish and every cup of coffee we serve."</p>
 </div>
