--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="about-grid">
             <div class="about-photo">
                 <!-- Add owner photo at ./images/owner.jpg (replace with real photo) -->
-                <img src="./images/owner.jpg" alt="Bilal Ahmed, owner of Bilal Ethiopian Kitchen">
+                <img src="./images/owner.jpg" alt="Bilal jemal, owner of Bilal Ethiopian Kitchen">
             </div>
 
             <div class="about-text">
