--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - About Us</title>
+    <title>Bilal Habeshan Kitchen - About Us</title>
     <link rel="stylesheet" href="./css/styles.css">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
@@ -12,7 +12,7 @@
 
     <header>
         <nav>
-            <h1>Bilal Ethiopian Kitchen</h1>
+            <h1>Bilal Habeshan Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -57,7 +57,7 @@
                     <div class="footer-item">
                         <!-- email icon -->
                         <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
-                        <span>info@bilalhabeshanfoods.com</span>
+                        <span>info@bilalhabeshankitchen.com</span>
                     </div>
                 </div>
             </div>
@@ -67,13 +67,13 @@
                     <h3>Student Information</h3>
                     <ul>
                         <li><strong>Name:</strong> <span id="student-name">Bilal Jemal</span></li>
-                        <li><strong>ID:</strong> <span id="student-id">UGR/18</span></li>
+                        <li><strong>ID:</strong> <span id="student-id">UGR/187943</span></li>
                         <li><strong>Department:</strong> <span id="student-college">Computer Science</span></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 
 </body>
