--- a/location.html
+++ b/location.html
@@ -11,7 +11,7 @@
 <body>
         <header>
         <nav>
-            <h1>Bilal Ethiopian Kitchen</h1>
+            <h1>Bilal Habeshan Kitchen</h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="menu.html">Menu</a></li>
@@ -70,13 +70,13 @@
                     <h3>Student Information</h3>
                     <ul>
                         <li><strong>Name:</strong> <span id="student-name">Bilal Jemal</span></li>
-                        <li><strong>ID:</strong> <span id="student-id">UGR/18</span></li>
+                        <li><strong>ID:</strong> <span id="student-id">UGR/187943/16</span></li>
                         <li><strong>Department:</strong> <span id="student-college">Computer Science</span></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <p>&copy; 2025 Bilal Ethiopian Kitchen. All Rights Reserved.</p>
+        <p>&copy; 2025 Bilal Habeshan Kitchen. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
