--- a/location.html
+++ b/location.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bilal Ethiopian Kitchen - Location</title>
+    <title>Bilal Habeshan Kitchen - Location</title>
     <link rel="stylesheet" href="./css/styles.css">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 
