--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <h3>Student Information</h3>
                     <ul>
                         <li><strong>Name:</strong> <span id="student-name">Bilal Jemal</span></li>
-                        <li><strong>ID:</strong> <span id="student-id">UGR/187943</span></li>
+                        <li><strong>ID:</strong> <span id="student-id">UGR/187943/16</span></li>
                         <li><strong>Department:</strong> <span id="student-college">Computer Science</span></li>
                     </ul>
                 </div>
